--- a/src/components/Popular/index.css
+++ b/src/components/Popular/index.css
@@ -155,3 +155,10 @@
   font-weight: bold;
   color: aliceblue;
 }
+.pagination {
+  border-radius: 0px;
+  background-color: transparent;
+  font-size: 20px;
+  font-family: 'Roboto';
+  color: #d6cfc7;
+}
